--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
 	<header>
 		<ul class="a-menu">
-			<li class="a-menu__item">
-			<button class="a-menu__item__link" href="#"><i class="material-icons">person</i>PROFILE</a></li></button> 
+			
+			<button class="a-menu__item__btn" href="#"><i class="material-icons">person</i>PROFILE</a></li></button> 
 			<li class="a-menu__item">
 			<a class="a-menu__item__link" href="#"><i class="material-icons">star</i>SKILLS</a></li>
 			<li class="a-menu__item">
@@ -25,34 +25,27 @@
 		</ul>
 	</header>
 	
-	<section>
-		<div class="article">
-		<h2 class="article__title">Mermeladas</h2>
-			<p class="article__desc"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eos accusantium, aspernatur animi. Modi mollitia tempore error eos assumenda est ad eligendi illo dolores. Nihil error nesciunt sint, reque repellendus.</p>
-			<img class="article__img" src="img/mermeladas pirque.jpg" alt="">
-			
+	<section id="portaf">
+		<div class="container">
+		<div class="row">
+		<div class=" col m5">
+			<img src="img/26440127.jpg" class="circle">
 		</div>
 
-		<div class="article article--green">
-		<h2 class="article__title">Comida Saludable</h2>
-			<p class="article__desc"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eos accusantium, aspernatur animi. Modi mollitia tempore error eos assumenda est ad eligendi illo dolores. Nihil error nesciunt sint, reque repellendus.</p>
-			<img class="article__img" src="img/comida-vegana-230x130.jpg" alt="">
-			
+		<div class="row">
+		<div class=" col m6 perfil">
+		<h4 class="porta__title">Juan Dela Cruz</h4>
+			<h6 class="porta__sub"> Web & Graphic Designer</h6>
+			<p>Hello I am Juan Dela Cruz Web and Graphics Designer Irom Philipines. If you have something to be done just call my name and I will be there.:)</p>
+			<button class="porta__btn" href="#"><i class="material-icons">send</i>HIRE ME</a></li></button>
+		</div>	
+		</div>	
 		</div>
 
-		<div class="article article--green">
-		<h2 class="article__title">Los beneficios de la Miel</h2>
-			<p class="article__desc"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eos accusantium, aspernatur animi. Modi mollitia tempore error eos assumenda est ad eligendi illo dolores. Nihil error nesciunt sint, reque repellendus.</p>
-			<img class="article__img" src="img/MIEL-DE-ABEJA-230x130.png" alt="">
-			
-		</div>
+
+		
 	</section>
 
-	<footer class="pie">
-		<p class="pie__item--center">
-			Create by Someone
-		</p>
-	</footer>
 	
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
