--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
 					<button class="porta__btn" href="#"><i class="material-icons">send</i>HIRE ME</a></li></button>
 				</div>	
 			</div>	
+			<div class="row">
+				<div class=" col m12 center">
+				<img src="img/124010.png" class="redes-sociales" alt="">
+				<img src="img/124021.png" class="redes-sociales" alt="">
+				<img src="img/124013.png" class="redes-sociales" alt="">
+				<img src="img/124037.png" class="redes-sociales" alt="">
+			</div>
 		</div>
 	</section>
 
